--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,10 +109,14 @@ optional = true
 version = "0.8"
 features = ["v4"]
 
-[dependencies.xsalsa20poly1305]
+[dependencies.crypto_secretbox]
 optional = true
-version = "0.8"
+version = "0.1"
 features = ["std"]
+
+[dependencies.crypto-common]
+optional = true
+version = "0.1"
 
 [dev-dependencies]
 criterion = "0.3"
@@ -161,7 +165,8 @@ driver-core = [
     "typemap_rev",
     "url",
     "uuid",
-    "xsalsa20poly1305",
+    "crypto_secretbox",
+    "crypto-common",
 ]
 rustls = ["async-tungstenite/tokio-rustls-webpki-roots", "rustls-marker"]
 native = ["async-tungstenite/tokio-native-tls", "native-marker"]
